tests/ui/feature-gates/feature-gate-raw-dylib-elf.stderr
error[E0658]: link kind `raw-dylib` is unstable on ELF platforms
  --> $DIR/feature-gate-raw-dylib-elf.rs:4:30
   |
LL | #[link(name = "meow", kind = "raw-dylib")]
   |                              ^^^^^^^^^^^
   |
   = note: see issue #135694 <https://github.com/rust-lang/rust/issues/135694> for more information
   = help: add `#![feature(raw_dylib_elf)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
